--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context="com.example.adambenyahia.currenconverterktl.MainActivity">
 
-    <TextView
+    <EditText
+            android:id="@+id/editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:ems="10"
+            android:hint="Enter Currency"
+            android:inputType="textPersonName"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            tools:layout_editor_absoluteX="50dp"
+            tools:layout_editor_absoluteY="65dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="65dp"
+            app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+            android:id="@+id/gbpText"
+            android:layout_width="0dp"
+            android:layout_height="41dp"
+            android:gravity="center_vertical"
+            android:text="GBP: "
+            android:textAlignment="center"
+            android:textSize="24sp"
+            tools:layout_editor_absoluteX="67dp"
+            tools:layout_editor_absoluteY="283dp"
+            android:layout_marginTop="86dp"
+            app:layout_constraintTop_toBottomOf="@+id/eurText"
+            android:layout_marginBottom="84dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="67dp"
+            android:layout_marginEnd="67dp" />
+
+    <TextView
+            android:id="@+id/usdText"
+            android:layout_width="0dp"
+            android:layout_height="41dp"
+            android:layout_marginBottom="61dp"
+            android:layout_marginEnd="67dp"
+            android:layout_marginStart="67dp"
+            android:layout_marginTop="66dp"
+            android:gravity="center_vertical"
+            android:text="USD: "
+            android:textAlignment="center"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="@+id/gbpText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/eurText"
+            tools:layout_editor_absoluteX="67dp"
+            tools:layout_editor_absoluteY="222dp" />
+
+    <TextView
+            android:id="@+id/eurText"
+            android:layout_width="0dp"
+            android:layout_height="41dp"
+            android:gravity="center_vertical"
+            android:text="EUR: "
+            android:textAlignment="center"
+            android:textSize="24sp"
+            tools:layout_editor_absoluteX="67dp"
+            tools:layout_editor_absoluteY="156dp"
+            android:layout_marginTop="38dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="67dp"
+            android:layout_marginEnd="67dp" />
+
+    <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="get"
+            android:text="Get"
+            tools:layout_editor_absoluteX="246dp"
+            tools:layout_editor_absoluteY="408dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="55dp"
+            app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
